--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -3,200 +3,11 @@
   height: 7rem;
 }
 
-.nav-link {
-  padding: 23px 20px;
-  font-weight: bold;
-
-  &:hover {
-    color: #333;
-    padding: 23px 20px;
-    transition-timing-function: linear;
-    transition-duration: 0.5s;
-    transition-property: border;
-    border-bottom: 4px solid #333;
-  }
-}
-
-.main-navbar {
-  z-index: 1;
-  height: 77px;
-  display: flex;
-  align-items: center;
-  // position: fixed;
-  width: 100%;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  background: rgba(0, 0, 0, 0.1);
-
-  .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .nav-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-
-  .nav-items {
-    position: absolute;
-    right: 12rem;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 40px;
-    list-style-type: none;
-  }
-
-  .mobile-nav-item {
-    display: none;
-  }
-
-  .auth-container {
-    display: flex;
-    position: absolute;
-    right: 10px;
-    padding: 0px 5px;
-    list-style-type: none;
-  }
-
-  .sign-in-link {
-    padding-right: 50px;
-    align-self: center;
-
-    &:hover {
-      color: rgb(59, 59, 226);
-    }
-  }
-
-  .signout-btn {
-    padding: 10px 10px;
-    border-radius: 3px;
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-    align-items: center;
-
-    &:hover {
-      color: #333;
-      background-color: whitesmoke;
-    }
-  }
-
-  .mobile-menu-toggle {
-    display: none;
-  }
-
-  .notification-dropdown {
-    width: 400px;
-    height: 0rem;
-    border-radius: 10px;
-    transition: 0.5s;
-    position: absolute;
-    overflow-y: auto;
-    padding: 0px;
-    left: -300px;
-    margin-top: 5px;
-    background-color: #f4f4f4;
-    box-shadow: 10px 10px 23px 0px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    z-index: 2;
-
-    a {
-      text-decoration: none;
-      color: black;
-
-      &:visited {
-        color: black;
-      }
-    }
-
-    &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-      background-color: #f5f5f5;
-      border-radius: 5px;
-    }
-
-    &::-webkit-scrollbar {
-      width: 10px;
-      background-color: #f5f5f5;
-      border-radius: 5px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: black;
-      border: 2px solid black;
-      border-radius: 5px;
-    }
-  }
-
-  .notification-icon {
-    color: black;
-    font-size: 1.5rem;
-    position: relative;
-    display: inline-block;
-  }
-
-  .notification-content {
-    position: relative;
-
-    .content-container {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #f4f4f4;
-
-      &:empty {
-        display: none;
-      }
-    }
-
-    .centered-text {
-      text-align: center;
-      display: block;
-      color: black;
-    }
-  }
-
-  .notification-button {
-    transition: 0.5s;
-    cursor: pointer;
-
-    &:hover > .notification-dropdown {
-      height: 50vh;
-    }
-  }
-
-  .notification-badge {
-    height: fit-content;
-    width: fit-content;
-    background-color: #d63031;
-    border-radius: 20px;
-    color: white;
-    padding: 0rem 0.3rem;
-    text-align: center;
-    position: absolute;
-    top: -0.2rem;
-    left: 13px;
-    border-style: solid;
-    border-width: 2px;
-
-    .badge-text {
-      font-size: 1rem;
-    }
-
-    &:empty {
-      display: none;
-    }
-  }
-}
-
 .custom-navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ffffff;
+  background-color: #d7d5d5;
   padding: 0 20px;
   height: 60px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -227,17 +38,17 @@
 .navbar-center {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 50px;
 }
 
 .navbar-search {
   position: relative;
-  width: 300px;
+  width: 400px;
 }
 
 .search-icon {
   position: absolute;
-  left: 10px;
+  right: 20px;
   top: 50%;
   transform: translateY(-50%);
   color: #65676b;
@@ -245,8 +56,8 @@
 
 .search-input {
   width: 100%;
-  padding: 8px 10px 8px 35px;
-  border-radius: 20px;
+  padding: 8px 10px 8px 10px;
+  border-radius: 10px;
   border: 1px solid #ddd;
   background-color: #f0f2f5;
   font-size: 14px;
@@ -270,14 +81,15 @@
 }
 
 .navbar-icon.active {
-  color: #1877f2;
-  border-bottom: 3px solid #1877f2;
+  // border-bottom: 3px solid #1877f2;
+  color: white;
+  background-color: #1877f2;
 }
 
 .navbar-right {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 
 .navbar-notifications {
@@ -341,7 +153,7 @@
 .profile-image {
   width: 32px;
   height: 32px;
-  border-radius: 50%;
+  border-radius: 4px;
   object-fit: cover;
 }
 
@@ -369,86 +181,11 @@
   color: #050505;
   font-size: 14px;
   transition: background-color 0.2s;
+  text-transform: uppercase;
+  box-sizing: border-box;
+  border-bottom: 4px solid transparent;
 }
 
 .profile-dropdown a:hover {
   background-color: #f0f2f5;
-}
-
-@media (max-width: 1200px) {
-  .header {
-    height: 60px;
-  }
-
-  .nav-items {
-    display: flex;
-    width: 100%;
-    position: absolute;
-    top: 60px;
-    left: -100%;
-    opacity: 0;
-    transition: all 0.5s ease;
-    flex-direction: column;
-    list-style-type: none;
-    grid-gap: 0px;
-
-    &.active {
-      background: #9899d1;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-      align-content: center;
-      padding-left: 0px;
-    }
-  }
-
-  .menu-icon {
-    width: 45px;
-    height: 45px;
-    color: white;
-  }
-
-  .nav-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 10vw;
-    padding: 30px 0px;
-  }
-
-  .nav-link:hover {
-    color: #ffc719;
-    border-bottom: none;
-  }
-
-  .signout-btn {
-    display: none;
-  }
-
-  .main-navbar {
-    .mobile-menu-toggle {
-      display: block;
-      position: absolute;
-      right: 0;
-      margin-right: 20px;
-
-      .mobile-sign-in {
-        border-radius: 3px;
-        color: white;
-        background: #0d7e65;
-        padding: 10px 30px;
-        align-self: center;
-      }
-    }
-
-    .mobile-nav-item {
-      display: block;
-      text-align: center;
-    }
-
-    .notification-dropdown {
-      left: -150px;
-    }
-  }
 }
