--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -15,14 +15,14 @@
   flex: 0.2;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
 }
 
 .main-content {
   flex: 0.6;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
 }
 
 .sidebar {
@@ -39,8 +39,11 @@
   border-radius: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 15px;
-  max-height: 500px;
   overflow-y: scroll;
+}
+
+.friends-section {
+  height: 550px;
 }
 
 .section-header {
@@ -183,8 +186,6 @@
 }
 
 .post-actions {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -244,7 +245,6 @@
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 15px;
-  margin-bottom: 20px;
 }
 
 .sidebar-section h3 {
